# Start

./: README.md  hie.yaml  stack.yaml  start.cabal
.github/workflows/: ci.yml
.history/: README_20201205165625.md  README_20201205181628.md  hie_20201123225442.yaml  stack_20201124204018.yaml  stack_20201124210626.yaml  stack_20201124211756.yaml  stack_20201124235050.yaml  stack_20201125001043.yaml  stack_20201128102303.yaml  stack_20201128113219.yaml  stack_20201128113449.yaml  stack_20201130165028.yaml  stack_20201202100113.yaml  stack_20201205173846.yaml  stack_20201205191131.yaml  stack_20201205191340.yaml  stack_20201208204843.yaml  stack_20201208212642.yaml  start_20201123174822.cabal  start_20201123175834.cabal  start_20201123181538.cabal  start_20201123181737.cabal  start_20201123181809.cabal  start_20201123181834.cabal  start_20201123181913.cabal  start_20201123225028.cabal  start_20201124203813.cabal  start_20201124203823.cabal  start_20201124203914.cabal  start_20201124210615.cabal  start_20201124210636.cabal  start_20201124211745.cabal  start_20201124234806.cabal  start_20201124235129.cabal  start_20201125001045.cabal  start_20201128102307.cabal  start_20201130165012.cabal  start_20201202100214.cabal  start_20201202100217.cabal  start_20201202100700.cabal  (+8 more)
.history/.github/workflows/: ci_20201205180440.yml  ci_20201205180619.yml  ci_20201205180757.yml  ci_20201205181220.yml  ci_20201205183350.yml  ci_20201205183429.yml  ci_20201206204201.yml  ci_20201206215445.yml  ci_20201206215616.yml  ci_20201208221451.yml  ci_20201208221511.yml  ci_20201208223806.yml  ci_20201208224054.yml  ci_20201208232001.yml  ci_20201208232308.yml
.history/app/: Main_20201202095959.hs  Main_20201202100826.hs  Main_20201202100921.hs  Main_20201202100938.hs  Main_20201202102336.hs  Main_20201202102341.hs  Main_20201202102402.hs  Main_20201202102410.hs  Main_20201202102442.hs  Main_20201202102617.hs  Main_20201202121445.hs  Main_20201202121513.hs  Main_20201202121539.hs  Main_20201202131942.hs  Main_20201202142604.hs  Main_20201202160817.hs  Main_20201202160827.hs  Main_20201202161419.hs  Main_20201202161448.hs  Main_20201202231723.hs  Main_20201203215743.hs  Main_20201203220347.hs  Main_20201203220836.hs  Main_20201203221531.hs  Main_20201203221611.hs  Main_20201203230408.hs  Main_20201203230944.hs  Main_20201206123703.hs  Main_20201206124806.hs  Main_20201206124828.hs  Main_20201206124847.hs  Main_20201206125040.hs  Main_20201206125223.hs  Main_20201206125239.hs  Main_20201206125301.hs  Main_20201206125521.hs  Main_20201206125750.hs  Main_20201206130605.hs  Main_20201206130742.hs  Main_20201206130841.hs  (+11 more)
.history/src/: Lib_20201123230133.hs  Lib_20201123230519.hs  Lib_20201123231135.hs  Lib_20201123232431.hs  Lib_20201123232446.hs  Lib_20201124185318.hs  Lib_20201124185350.hs  Lib_20201124185443.hs  Lib_20201124185501.hs  Lib_20201124192422.hs  Lib_20201124193620.hs  Lib_20201124195308.hs  Lib_20201124195402.hs  Lib_20201124195416.hs  Lib_20201124195456.hs  Lib_20201124195508.hs  Lib_20201124195601.hs  Lib_20201124195612.hs  Lib_20201124195934.hs  Lib_20201124200913.hs  Lib_20201124203223.hs  Lib_20201124203339.hs  Lib_20201124203450.hs  Lib_20201124203537.hs  Lib_20201124203609.hs  Lib_20201124203648.hs  Lib_20201124204116.hs  Lib_20201124204139.hs  Lib_20201124205344.hs  Lib_20201124205500.hs  Lib_20201124205833.hs  Lib_20201124210443.hs  Lib_20201124210507.hs  Lib_20201124210830.hs  Lib_20201124210846.hs  Lib_20201124210909.hs  Lib_20201124211018.hs  Lib_20201124211031.hs  Lib_20201124211038.hs  Lib_20201124211714.hs  (+212 more)
.history/test/: Spec_20201123175546.hs  Spec_20201123180949.hs  Spec_20201123181131.hs  Spec_20201124185546.hs  Spec_20201124185650.hs  Spec_20201124185816.hs  Spec_20201124193730.hs  Spec_20201124212408.hs  Spec_20201124213422.hs  Spec_20201124224404.hs  Spec_20201124224532.hs  Spec_20201124225308.hs  Spec_20201124232220.hs  Spec_20201124234146.hs  Spec_20201124234302.hs  Spec_20201124235935.hs  Spec_20201125000048.hs  Spec_20201125124939.hs  Spec_20201125125206.hs  Spec_20201125125414.hs  Spec_20201125125609.hs  Spec_20201125130319.hs  Spec_20201125130441.hs  Spec_20201125130454.hs  Spec_20201125131508.hs  Spec_20201125173926.hs  Spec_20201125184806.hs  Spec_20201125192449.hs  Spec_20201125202347.hs  Spec_20201125203103.hs  Spec_20201125203704.hs  Spec_20201125203808.hs  Spec_20201125204404.hs  Spec_20201125204511.hs  Spec_20201125220514.hs  Spec_20201125231121.hs  Spec_20201128160019.hs  Spec_20201128181836.hs  Spec_20201129165415.hs  Spec_20201130093120.hs  (+76 more)
.stack-work/: stack.sqlite3
.stack-work/ghci/039c4aa2/: cabal_macros.h
.stack-work/ghci/0f4950a5/: cabal_macros.h
.stack-work/ghci/10508a51/: cabal_macros.h
.stack-work/ghci/11d41b1a/: cabal_macros.h
.stack-work/ghci/162dbc8e/: cabal_macros.h
.stack-work/ghci/1919293c/: cabal_macros.h
.stack-work/ghci/19f60de1/: cabal_macros.h
.stack-work/ghci/1dc477ad/: cabal_macros.h
.stack-work/ghci/26a30de5/: cabal_macros.h
.stack-work/ghci/2d1ef44f/: cabal_macros.h
.stack-work/ghci/2d481113/: cabal_macros.h
.stack-work/ghci/3064d6ed/: cabal_macros.h
.stack-work/ghci/362681ea/: cabal_macros.h
.stack-work/ghci/3cf0a5b4/: cabal_macros.h
.stack-work/ghci/429237a3/: cabal_macros.h
.stack-work/ghci/48514fc2/: cabal_macros.h
.stack-work/ghci/4d79cdc0/: cabal_macros.h
.stack-work/ghci/51563587/: cabal_macros.h
.stack-work/ghci/524e1f0b/: cabal_macros.h
.stack-work/ghci/5407d6a5/: cabal_macros.h
.stack-work/ghci/561e54cc/: cabal_macros.h
.stack-work/ghci/793425c4/: cabal_macros.h
.stack-work/ghci/7eab755c/: cabal_macros.h
.stack-work/ghci/8128237a/: cabal_macros.h
.stack-work/ghci/82345b52/: cabal_macros.h
.stack-work/ghci/8397d4e8/: cabal_macros.h
.stack-work/ghci/862c31dd/: cabal_macros.h
app/: Main.hs
app/.liquid/: Main.hs.cst.html  Main.hs.html  Main.hs.json  Main.hs.smt2  Main.hs.vim.annot
src/: Lib.hs
src/.liquid/: Lib.hs.bak  Lib.hs.bspec  Lib.hs.cst.html  Lib.hs.err  Lib.hs.html  Lib.hs.json  Lib.hs.smt2  Lib.hs.vim.annot
test/: Spec.hs  TestsMain.hs
(+910 files in other folders)
