cabal-version:       2.4
name:                start
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/start#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable start-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , start
  default-language:    Haskell2010

test-suite start-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestsMain.hs
  build-depends:       base
                     , start
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , hspec ^>= 2.7.4
                     , hspec-hedgehog
                     , hedgehog  >= 1.0.2 && < 2 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/start
