cabal-version:       2.4
name:                start
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/start#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Venkatesh N
maintainer:          Venkatesh.narayanan@live.in
copyright:           2020 Venkatesh N
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , number-length > 0.2.1.0
                     , integer-gmp > 1.0.3.0
                     , integer-logarithms > 1.0.3
                     , ghc-typelits-extra > 0.3.3
  default-language:    Haskell2010

executable start-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , start
 --                    , liquidhaskell >= 0.8.10 && < 0.8.12
 --                    , liquid-base >= 4.14.0 && < 4.14.2
 --                    , liquid-containers >= 0.6.2.1 && < 0.6.3
                     , parallel >= 3.2.2.0
  default-language:    Haskell2010
 -- ghc-options:
 --   -fplugin=LiquidHaskell -hide-package base -no-auto-link-packages
  build-depends:
 --   liquidhaskell >= 0.8.10 && < 0.8.12,
 --   liquid-base >= 4.14.0 && < 4.14.2,
 --   liquid-containers >= 0.6.2.1 && < 0.6.3

test-suite start-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestsMain.hs
  build-depends:       base
                     , start
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , hspec ^>= 2.7.4
                     , hspec-hedgehog
                     , hedgehog  >= 1.0.2 && < 2 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/start
